--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
     async function populateSelectOptions() {
       const selectElement = document.getElementById("iframeSelect");
       const extensions = {
+	"DeArrow (TEST)": "chrome-extension://enamippconapkdmgfgjchkhakpfinmaj/options/options.html",
+	"Smoothwall Filter MV2": "chrome-extension://nlcnbnnmbfgekccnapcfjpoofnoblfpk/views/diagnostics.html",
+	"Smoothwall Filter MV1": "chrome-extension://jbldkhfglmgeihlcaeliadhipokhocnm/views/diagnostics.html",
 	"Securly (1st ID)": "chrome-extension://joflmkccibkooplaeoinecjbmdebglab/fonts/Metropolis.css",
 	"Securly (2nd ID)": "chrome-extension://ckecmkbnoanpgplccmnoikfmpcdladkc/fonts/Metropolis.css",
         "Securly (old)": "chrome-extension://iheobagjkfklnlikgihanlhcddjoihkg/fonts/Metropolis.css",
