--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     async function populateSelectOptions() {
       const selectElement = document.getElementById("iframeSelect");
       const extensions = {
-	"DeArrow (TEST)": "chrome-extension://enamippconapkdmgfgjchkhakpfinmaj/options/options.html",
+	"UBO (TEST)": "chrome-extension://ddkjiahejlhfcafbddmgiahcphecmpfh/dashboard.html",
 	"Smoothwall Filter MV2": "chrome-extension://nlcnbnnmbfgekccnapcfjpoofnoblfpk/views/diagnostics.html",
 	"Smoothwall Filter MV1": "chrome-extension://jbldkhfglmgeihlcaeliadhipokhocnm/views/diagnostics.html",
 	"Securly (1st ID)": "chrome-extension://joflmkccibkooplaeoinecjbmdebglab/fonts/Metropolis.css",
