--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
         if (response.ok) {
           return true;
         } else {
-          return false;
+          return true;
         }
       } catch (error) {
-        return false;
+        return true;
       }
     }
 
